styling and animation fixes

--- a/index.html
+++ b/index.html
@@ -53,10 +53,18 @@
             <div id="introduction-container">
               <h3>WHO AM I?</h3>
               <h4>Aspring Developer</h4>
-              <p>While my academic background is in Electrical and Computer Engineering, my heart and soul belong to
-                Software Engineering and Web Development.
-                My relentless drive and passion fuel my work every day, and I'm currently seeking opportunities to bring
-                my commitment and skills to forward-thinking teams.</p>
+              <p>
+                I am a Computer Engineering graduate with a deep-rooted passion for Software Engineering and Web Development. 
+                My education has honed my problem-solving skills, making me a relentless and dedicated developer. Now, I'm eager to 
+                apply my expertise in the Software Engineering domain and Web Developement space.
+              </p>
+                <!-- While my academic training is rooted in Electrical and Computer Engineering, 
+                I've developed a strong affinity for Software Engineering and Web Development. 
+                My degree in Computer Engineering has armed me with a unique perspective and skillset, 
+                shaping me into a versatile problem solver. I possess an unwavering dedication and 
+                relentless pursuit of excellence in all that I undertake. I am currently exploring 
+                opportunities to leverage my problem-solving prowess and dedication within progressive teams 
+                in the Software Engineering domain and Web Developement space. -->
             </div>
             <div class="pill-container">
               <div class="pill-box">
@@ -99,13 +107,13 @@
           <div id="experience-box">
             <div>
               <span>2021-PRESENT</span>
-              <h3>BACHLOR IN COMPUTER ENGINEER</h3>
+              <h3>BACHELOR IN COMPUTER ENGINEER</h3>
               <span>UNIVERSITY OF CALIFORNIA, SAN DIEGO</span>
             </div>
             <div>
               <span>2022-Present</span>
               <h3>BETTER TIMES TUTORING</h3>
-              <span>SAN DIEGO, CA</span>
+              <span>FOUNDER & UX DESIGNER</span>
             </div>
           </div>
         </div>
