text and contact section began

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;1,500&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400&display=swap" rel="stylesheet">
     
   <script src="\scripts\scroll.js"></script>
 </head>
@@ -160,7 +159,23 @@
     </section>
 
     <section id="contact" class="hidden">
-      <form>
+      <div id="contact-heading">
+        <h3 style="float: left;">Get in</h3>
+        <h3 style="float: right;">Touch</h3>
+      </div>
+      <div>
+        <div>
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+        </div>
+        <div id="contact-info">
+          <h2>Email:</h2>
+          <h3>BrianMendez. Dev@gmail.com</h3>
+        </div>
+      </div>
+      <!-- <form>
         <h2>Contact Me</h2>
         <hr>
         <h3>
@@ -175,7 +190,7 @@
         <br />
         <input type="submit" value="Submit" />
       </form>
-    </section>
+    </section> -->
   </main>
 
   <hr />
