--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>
           </div>
           <div class="project-img-container">
-            <img src="/images/space.jpg" alt="Better Times Tutoring Logo" />
+            <img src="/images/inviosync.png" alt="Better Times Tutoring Logo" />
           </div>
         </div>
 
@@ -189,8 +189,8 @@
         <input type="text" id="lname" name="lname" /> <br />
         <br />
         <input type="submit" value="Submit" />
-      </form>
-    </section> -->
+      </form> -->
+    </section>
   </main>
 
   <hr />
