landing page temp and favicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400&display=swap" rel="stylesheet">
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     
   <script src="\scripts\scroll.js"></script>
 </head>
@@ -34,10 +35,12 @@
       </div>
       <div id="landingPage-img">
         <img id="img1" src="/images/brian.jpg" alt="A photo of Brian" />
-        <img id="img2" src="/images/space.jpg" alt="A photo of Brian" />
-        <img id="img3" src="/images/guitar.jpg" alt="A photo of Brian" />
-        <img id="img4" src="/images/agave.jpg" alt="A photo of Brian" />
+        <img id="img2" src="/images/blackhole.jpg" alt="A photo of Brian" />
+        <img id="img3" src="/images/guitar2.png" alt="A photo of Brian" />
+        <img id="img4" src="/images/driving.jpg" alt="A photo of Brian" />
         <img id="img5" src="/images/fishing.jpg" alt="A photo of Brian" />
+        <img id="img6" src="/images/computer.jpg" alt="A photo of Brian" />
+
       </div>
     </section>
 
@@ -112,7 +115,7 @@
             <div>
               <span>2022-Present</span>
               <h3>BETTER TIMES TUTORING</h3>
-              <span>FOUNDER & UX DESIGNER</span>
+              <span>FOUNDER & UX/UI DESIGNER</span>
             </div>
           </div>
         </div>
@@ -130,31 +133,60 @@
           <div class="project-description">
             <span>2023</span>
             <h3>InvoiSync</h3>
+            <span>Developer</span>
             <p>
               InvoiSync is a dedicated desktop application, crafted using Electron js, tailor-made for 
               'Daniel Mendez Landscaping Inc.' This robust platform offers a comprehensive suite of features 
-              to manage invoices, store crucial client data, and produce accurate estimates efficiently.
+              to manage and create pdf copies of monthly made invoices, store crucial client data, and produce accurate 
+              estimates efficiently. 
             </p>
+            <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a>
             <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>
           </div>
           <div class="project-img-container">
-            <img src="/images/inviosync.png" alt="Better Times Tutoring Logo" />
+            <img src="/images/inviosync.png" alt="InvoiSync Logo" />
           </div>
-        </div>
+        </div>  
 
         <div id="project2">
           <div class="project-description">
             <span>2022-Present</span>
             <h3>Better Times Tutoring</h3>
+            <span>UI/UX Designer</span>
             <p>
               A tutoring website that offers a variety of academic resources and
-              services to enhance student success and achievement.
+              services to enhance student success and achievement. We believe that the gateway 
+              to effective learning starts with an impeccable user experience. Our tutoring website 
+              is a testament to this belief, curated with the utmost attention to design detail, emphasizing 
+              our core values of expertise, accessibility, and differentiation in the educational sector.
             </p>
-            <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>
+            <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a>
+            <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>       
           </div>
           <div class="project-img-container">
             <img src="/images/logo.PNG" alt="Better Times Tutoring Logo" />
           </div>
+        </div>
+
+        <div id="project3">
+          <div class="project-description">
+            <span>2022</span>
+            <h3>Frugal</h3>
+            <span>Team Leader</span>
+            <p>
+              A web-based expense tracker, to ensures your financial data stays in the right hands while providing an intuitive 
+              interface to manage your expenses seamlessly. Designed with both security and user experience in mind, 'Frugal' 
+              offers a CRUD functionality allowing users to manage their financial records, a login system for varies accounts, 
+              data visualization to provide users with immediate insights into their spending behaviors, and search bar feature
+              and expense categorization. 
+            </p>
+            <a class="project-link" href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main">Documentation</a>       
+          </div>
+          <div class="project-img-container">
+            <img src="/images/TheByte.png" alt="The Byte Logo for Frugal" />
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -164,32 +196,17 @@
         <h3 style="float: right;">Touch</h3>
       </div>
       <div>
-        <div>
+        <!-- <div>
           <img src="" alt="">
           <img src="" alt="">
           <img src="" alt="">
           <img src="" alt="">
-        </div>
+        </div> -->
         <div id="contact-info">
           <h2>Email:</h2>
           <h3>BrianMendez. Dev@gmail.com</h3>
         </div>
       </div>
-      <!-- <form>
-        <h2>Contact Me</h2>
-        <hr>
-        <h3>
-          Interested in Collaborating or <br />
-          have general questions?
-        </h3>
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname" /> <br />
-        <br />
-        <label for="lname">Last name:</label>
-        <input type="text" id="lname" name="lname" /> <br />
-        <br />
-        <input type="submit" value="Submit" />
-      </form> -->
     </section>
   </main>
 
