added logo to header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
 <body>
   <header id="global-header">
+    <!-- <img src="/images/personalLogo.png" alt="personal logo"> -->
     <h1>DEVELOPER WEBSITE</h1>
     <nav>
+      <img src="/images/personalLogo.png" alt="personal logo">
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
@@ -31,7 +33,7 @@
   <main>
     <section class="home">
       <div id="landingPage-content">
-        <h2>BRIAN MENDEZ </h2>
+        <h2>BRIAN<br>MENDEZ</h2>
       </div>
       <div id="landingPage-img">
         <img id="img1" src="/images/brian.jpg" alt="A photo of Brian" />
@@ -40,7 +42,6 @@
         <img id="img4" src="/images/driving.jpg" alt="A photo of Brian" />
         <img id="img5" src="/images/fishing.jpg" alt="A photo of Brian" />
         <img id="img6" src="/images/computer.jpg" alt="A photo of Brian" />
-
       </div>
     </section>
 
@@ -65,7 +66,8 @@
           </div>
           <div class="pill-container">
             <div class="pill-box">
-              <span class="pill-box-left" style="background: linear-gradient(330deg, #000, #000, #007BFF); border: 2px solid #007BFF;">
+              <span class="pill-box-left"
+                style="background: linear-gradient(330deg, #000, #000, #007BFF); border: 2px solid #007BFF;">
                 FRONTEND
               </span>
               <span class="pill-box-right">
@@ -74,7 +76,8 @@
               </span>
             </div>
             <div class="pill-box">
-              <span class="pill-box-left" style="background: linear-gradient(330deg, #000, #000, #8B5CF6); border: 2px solid #8B5CF6">
+              <span class="pill-box-left"
+                style="background: linear-gradient(330deg, #000, #000, #8B5CF6); border: 2px solid #8B5CF6">
                 BACKEND
               </span>
               <span class="pill-box-right">
@@ -84,7 +87,8 @@
               </span>
             </div>
             <div class="pill-box">
-              <span class="pill-box-left" style="background: linear-gradient(330deg, #000, #000, #FF6B6B); border: 2px solid #FF6B6B">
+              <span class="pill-box-left"
+                style="background: linear-gradient(330deg, #000, #000, #FF6B6B); border: 2px solid #FF6B6B">
                 SOFT SKILLS
               </span>
               <span class="pill-box-right">
@@ -192,33 +196,37 @@
             <h3>FEGprocessorX</h3>
             <span>Developer</span>
             <p>
-              A microprocessor FEC Restoration ISA, developed in Quartus and System Verilog, engineered for robust 
-              information recovery during data transmission. This system boasts a precise set of features to restore corrupted data 
-              through Forward Error Correction (FEC) methodologies, signal Double Error Detection (DED), seamlessly handling data via registers, and 
-              integrating mathematical operations essential for FEC. It's a testament to simultaneous data processing and operation execution, presenting various branches for diverse 
+              A microprocessor FEC Restoration ISA, developed in Quartus and System Verilog, engineered for robust
+              information recovery during data transmission. This system boasts a precise set of features to restore
+              corrupted data
+              through Forward Error Correction (FEC) methodologies, signal Double Error Detection (DED), seamlessly
+              handling data via registers, and
+              integrating mathematical operations essential for FEC. It's a testament to simultaneous data processing
+              and operation execution, presenting various branches for diverse
               FEC data management scenarios.
             </p>
-            <a class="project-link"
-              href="https://github.com/B1mendez/FEGprocessorx">Documentation</a>
+            <a class="project-link" href="https://github.com/B1mendez/FEGprocessorx">Documentation</a>
           </div>
           <div class="project-img-container">
             <img src="/images/processor.jpg" alt="Image of processor for FEGprocessorX" />
           </div>
         </div>
-        
+
         <div class="project">
           <div class="project-description">
             <span>2023</span>
             <h3>Bitcoin Hashing Model</h3>
             <span>Developer</span>
             <p>
-              A Bitcoin hashing model, developed in Quartus and System Verilog, utilizes the SHA-256 cryptographic hashing algorithm to securely 
-              chain blocks of bitcoin transaction data. The SHA256 algorithm converts input data of arbitrary size, called a message, into a fixed
-              output called a hash value of 256 bits in order to ensure the security of the message. The Bitcoin blockchain uses SHA -256 cryptographic 
-              hashing algorithm to chain blocks each storing digital information about financial transactions data. 
+              A Bitcoin hashing model, developed in Quartus and System Verilog, utilizes the SHA-256 cryptographic
+              hashing algorithm to securely
+              chain blocks of bitcoin transaction data. The SHA256 algorithm converts input data of arbitrary size,
+              called a message, into a fixed
+              output called a hash value of 256 bits in order to ensure the security of the message. The Bitcoin
+              blockchain uses SHA -256 cryptographic
+              hashing algorithm to chain blocks each storing digital information about financial transactions data.
             </p>
-            <a class="project-link"
-              href="https://github.com/B1mendez/Bitcoin-Hashing/">Documentation</a>
+            <a class="project-link" href="https://github.com/B1mendez/Bitcoin-Hashing/">Documentation</a>
           </div>
           <div class="project-img-container">
             <img src="/images/bitcoin.jpg" alt="The Byte Logo for Frugal" />
