minor bug fixes

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
               is a testament to this belief, curated with the utmost attention to design detail, emphasizing
               our core values of expertise, accessibility, and differentiation in the educational sector.
             </p>
-            <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a>
-            <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>
+            <!-- <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a> -->
+            <a class="project-link" href="https://bettertimestutoring.com/">Visit Site</a>
           </div>
           <div class="project-img-container">
             <img src="/images/logo.PNG" alt="Better Times Tutoring Logo" />
