--- a/index.html
+++ b/index.html
@@ -77,12 +77,16 @@
     <h1>DEVELOPER WEBSITE</h1>
     <nav>
       <img src="/images/personalLogo.png" alt="personal logo">
-      <ul>
+      <ul id="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact Me</a></li>
       </ul>
+
+      <button id="hamburger-btn">
+        ☰
+      </button>
     </nav>
   </header>
   <main id="main-content">
@@ -108,7 +112,7 @@
         <h2 class="vertical-title">ABOUT ME</h2>
       </aside>
       <div class="content-container">
-        <div id="test1">
+        <div class="content">
           <div id="introduction-container">
             <h3>WHO AM I?</h3>
             <h4>Aspring Developer</h4>
@@ -156,7 +160,7 @@
           </div>
         </div>
 
-        <div id="test2">
+        <div class="content">
           <div id="experience-container">
             <h3>EDUCATION <br> <span>&</span></h3>
             <h3>EXPERIENCE</h3>
