--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
 
         <div class="content">
           <div id="experience-container">
-            <h3>EDUCATION <br> <span>&</span></h3>
-            <h3>EXPERIENCE</h3>
+            <h3>EDUCATION <br>&<br> EXPERIENCE</h3>
           </div>
           <div id="experience-box">
             <div>
