--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
         <h2>BRIAN<br>MENDEZ</h2>
       </div>
 
-      <!-- <div id="landingPage-img">
+      <div id="landingPage-img">
         <img id="img1" src="/images/brian.jpg" alt="A photo of Brian" />
-        <img id="img2" src="/images/blackhole.jpg" alt="A photo of Brian" />
-        <img id="img3" src="/images/guitar2.png" alt="A photo of Brian" />
-        <img id="img4" src="/images/driving.jpg" alt="A photo of Brian" />
-        <img id="img5" src="/images/fishing.jpg" alt="A photo of Brian" />
+        <img id="img2" src="/images/guitar2.png" alt="A photo of Brian" />
+        <img id="img3" src="/images/HEADPHONES.png" alt="A photo of Brian" />
+        <img id="img4" src="/images/keyboard.png" alt="A photo of Brian" />
+        <img id="img5" src="/images/lamp.png" alt="A photo of Brian" />
         <img id="img6" src="/images/computer.jpg" alt="A photo of Brian" />
-      </div> -->
+      </div>
     </section>
 
     <section id="about" class="hidden">
