temporary loading page

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
 
       <div id="landingPage-img">
-        <img id="img1" src="/images/brian.jpg" alt="A photo of Brian" />
+        <!-- <img id="img1" src="/images/brian.jpg" alt="A photo of Brian" /> -->
         <img id="img2" src="/images/guitar2.png" alt="A photo of Brian" />
         <img id="img3" src="/images/HEADPHONES.png" alt="A photo of Brian" />
         <img id="img4" src="/images/keyboard.png" alt="A photo of Brian" />
