a tag button style

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               estimates efficiently.
             </p>
             <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a>
-            <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a>
+            <!-- <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a> -->
           </div>
           <div class="project-img-container">
             <img src="/images/inviosync.png" alt="InvoiSync Logo" />
