added resume file

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <li><a href="#about">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact Me</a></li>
+        <li><a href="/files/Resume.pdf" download="My-Resume">Resume</a></li>
       </ul>
 
       <button id="hamburger-btn">
