github link InvioSync

--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
               InvoiSync is a dedicated desktop application, crafted using Electron js, tailor-made for
               'Daniel Mendez Landscaping Inc.' This robust platform offers a comprehensive suite of features
               to manage and create pdf copies of monthly made invoices, store crucial client data, and produce accurate
-              estimates efficiently.
+              estimates efficiently. It generates automated monthly invoices specific to clients selected using jsPDF API.  
+  
             </p>
-            <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a>
-            <!-- <a class="project-link" href="https://bettertimestutoring.com/">Learn More</a> -->
+            <a class="project-link" href="https://github.com/B1mendez/Invoice-Management">Learn More</a>
           </div>
           <div class="project-img-container">
             <img src="/images/inviosync.png" alt="InvoiSync Logo" />
