--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </div>
           <div id="experience-box">
             <div>
-              <span>2021-PRESENT</span>
+              <span>2021-2023</span>
               <h3>BACHELOR IN COMPUTER ENGINEER</h3>
               <span>UNIVERSITY OF CALIFORNIA, SAN DIEGO</span>
             </div>
@@ -313,12 +313,12 @@
         <div id="contact-section">
           <div id="social-section">
             <div class="social-icon">
-              <a href="https://twitter.com/YourUsername" target="_blank" rel="noopener noreferrer">
+              <a href="https://twitter.com/mangolianbeefba" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://www.github/b1mendez" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/B1mendez" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
               </a>
             </div>
