--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               Development.
               My education has honed my problem-solving skills, making me a relentless and dedicated developer. Now, I'm
               eager to
-              apply my expertise in the Software Engineering domain and Web Developement space.
+              apply my expertise in the Software Engineering domain and Web Development space.
             </p>
           </div>
           <div class="pill-container">
