LightHouse pass and starting case study

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8" />
   <title>Brian's Porfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Brian Mendez's Developer Portfolio - 
+  showcasing expertise in software engineering, web development, innovative projects, and a 
+  deep passion for technology. Explore to learn more about Brian's journey and collaborations.">
   <link rel="stylesheet" href="/styles/styles.css" />
   <script src="https://kit.fontawesome.com/5b4b3e0211.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <script src="\scripts\scroll.js"></script>
   <noscript>
@@ -83,10 +82,10 @@
     <nav>
       <img src="/images/personalLogo.png" alt="personal logo">
       <ul id="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact Me</a></li>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/about">About Me</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/contact">Contact Me</a></li>
         <li><a href="/files/Resume.pdf" download="Brian-Mendez-Resume"> Resume</a></li>
       </ul>
 
@@ -202,10 +201,12 @@
               InvoiSync is a dedicated desktop application, crafted using Electron js, tailor-made for
               'Daniel Mendez Landscaping Inc.' This robust platform offers a comprehensive suite of features
               to manage and create pdf copies of monthly made invoices, store crucial client data, and produce accurate
-              estimates efficiently. It generates automated monthly invoices specific to clients selected using jsPDF API.  
-  
+              estimates efficiently. It generates automated monthly invoices specific to clients selected using jsPDF
+              API.
+
             </p>
-            <a class="project-link" href="https://github.com/B1mendez/Invoice-Management">Learn More</a>
+            <a class="project-link" href="https://github.com/B1mendez/Invoice-Management"
+              aria-label="InvoiSync Project documentation on GitHub">Case Study</a>
           </div>
           <div class="project-img-container">
             <img src="/images/inviosync.png" alt="InvoiSync Logo" />
@@ -224,8 +225,8 @@
               is a testament to this belief, curated with the utmost attention to design detail, emphasizing
               our core values of expertise, accessibility, and differentiation in the educational sector.
             </p>
-            <!-- <a class="project-link" href="https://bettertimestutoring.com/">Case Study</a> -->
-            <a class="project-link" href="https://bettertimestutoring.com/">Visit Site</a>
+            <a class="project-link" href="https://bettertimestutoring.com/" 
+              aria-label="Link to Better Times Tutoring Website">Visit Site</a>
           </div>
           <div class="project-img-container">
             <img src="/images/logo.PNG" alt="Better Times Tutoring Logo" />
@@ -248,8 +249,9 @@
               feature
               and expense categorization.
             </p>
-            <a class="project-link"
-              href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main">Documentation</a>
+            <a class="project-link" href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main"
+              aria-label="Frugal Project documentation on GitHub">Documentation</a>
+
           </div>
           <div class="project-img-container">
             <img src="/images/TheByte.png" alt="The Byte Logo for Frugal" />
@@ -270,7 +272,8 @@
               and operation execution, presenting various branches for diverse
               FEC data management scenarios.
             </p>
-            <a class="project-link" href="https://github.com/B1mendez/FEGprocessorx">Documentation</a>
+            <a class="project-link" href="https://github.com/B1mendez/FEGprocessorx" 
+              aria-label=" FEGprocessorX Project documentation on GitHub">Documentation</a>
           </div>
           <div class="project-img-container">
             <img src="/images/processor.jpg" alt="Image of processor for FEGprocessorX" />
@@ -291,7 +294,8 @@
               blockchain uses SHA -256 cryptographic
               hashing algorithm to chain blocks each storing digital information about financial transactions data.
             </p>
-            <a class="project-link" href="https://github.com/B1mendez/Bitcoin-Hashing/">Documentation</a>
+            <a class="project-link" href="https://github.com/B1mendez/Bitcoin-Hashing/"
+              aria-label="Bitcoin Hashing Model Project documentation on GitHub">Documentation</a>
           </div>
           <div class="project-img-container">
             <img src="/images/bitcoin.jpg" alt="The Byte Logo for Frugal" />
@@ -313,22 +317,22 @@
         <div id="contact-section">
           <div id="social-section">
             <div class="social-icon">
-              <a href="https://twitter.com/mangolianbeefba" target="_blank" rel="noopener noreferrer">
+              <a href="https://twitter.com/mangolianbeefba" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://github.com/B1mendez" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/B1mendez" aria-label="Github" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://www.instagram.com/brianmendez0/" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.instagram.com/brianmendez0/" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/" aria-label="Linkedin" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin"></i>
               </a>
             </div>
@@ -352,7 +356,7 @@
   <footer class="footer">
     <div id="copyright">
       <span>Created by Brian Mendez</span>
-      <a>© 2023</a>
+      <span>© 2023</span>
     </div>
   </footer>
 </body>
