temporary sizing fix

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
       stroke="white" stroke-width="10" stroke-linejoin="round" mask="url(#path-1-outside-1_8_19)" />
   </svg>
   <header id="global-header">
-    <h1>DEVELOPER WEBSITE</h1>
+    <h1>DEVELOPER <br class="responsive-break"> WEBSITE</h1>
     <nav>
       <img src="/images/personalLogo.png" alt="personal logo">
       <ul id="nav-links">
-        <li><a href="/home">Home</a></li>
-        <li><a href="/about">About Me</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/contact">Contact Me</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact Me</a></li>
         <li><a href="/files/Resume.pdf" download="Brian-Mendez-Resume"> Resume</a></li>
       </ul>
 
