--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       <img src="/images/personalLogo.png" alt="personal logo">
       <ul id="nav-links">
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Me</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact Me</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="/files/Resume.pdf" download="Brian-Mendez-Resume"> Resume</a></li>
       </ul>
 
