new responsive design

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="content">
           <div id="introduction-container">
             <h3>WHO AM I?</h3>
-            <h4>Aspring Developer</h4>
+            <h4>Pragmatic Developer</h4>
             <p>
               I am a Computer Engineering graduate with a deep-rooted passion for Software Engineering and Web
               Development.
