--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div id="experience-box">
             <div>
               <span>2021-2023</span>
-              <h3>BACHELOR IN ELECTRAL & COMPUTER ENGINEERING</h3>
+              <h3>BACHELOR'S IN ELECTRICAL & COMPUTER ENGINEERING</h3>
               <span>UNIVERSITY OF CALIFORNIA, SAN DIEGO</span>
             </div>
             <div>
