updating about me section

--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
                 FRONTEND
               </span>
               <span class="pill-box-right">
-                HTML, CSS, JavaScript. Experienced in building responsive and user-friendly
-                interfaces and improving website performance.
+                With a foundation in HTML, CSS, and JavaScript, I've engineered multi-device compatible websites, enhancing UX/UI and optimizing performance.
               </span>
             </div>
             <div class="pill-box">
@@ -146,9 +145,8 @@
                 BACKEND
               </span>
               <span class="pill-box-right">
-                Proficient in Node.js, Express, and Python with Django. Able to
-                design and implement APIs, manage databases, and build secure and
-                scalable server-side applications.
+                Proficient in Java, C++, C#, and SystemVerilog. My backend expertise is both versatile and robust which
+                fosters a unique blend of software and hardware development skills
               </span>
             </div>
             <div class="pill-box">
@@ -157,9 +155,8 @@
                 SOFT SKILLS
               </span>
               <span class="pill-box-right">
-                Effective communicator, great team player, and a strong problem
-                solver. Comfortable working in agile development teams and
-                handling multiple tasks.
+                Leader, effective communicator, and team player. Emphasizing Agile methodologies for iterative development. 
+                Adaptability, innovation, and problem-solving are at the core of my approach.
               </span>
             </div>
           </div>
